# Spin_and_Go_Solver

./: .env  .gitignore  CMakeLists.txt  Google-Drive-API-SETUP.md  LICENSE  README.md  canonical_representations.py  equity_river_calculation  excel.py  info_waste.py  infosets_mpi.cpp  kmeans  main  main.cpp  test_uniqueness_infosets.cpp  train.cpp  train_enhanced.cpp  train_optimized.cpp  train_optimized_google_drive.cpp  viewer.py
spingo/: enumerate_actions_sequences  enumerate_actions_sequences_flop  enumerate_actions_sequences_flop.cpp  enumerate_actions_sequences_preflop  enumerate_actions_sequences_preflop.cpp  flop_action_sequences.txt  flop_infosets.txt  infosets.txt  mccfr.cpp  mccfr.h  preflop_action_sequences.txt  spingo  spingo copy  spingo copy.cpp  spingo.cpp  spingo.h  spingo_chatgpt  spingo_chatgpt.cpp  spingo_old.cpp
strategies/: aggregate.cpp
utils/: Kmeans  Kmeans.cpp  Kmeans_rounds.cpp  average_equity_clusters.cpp  emd_flop_clusters_mapping.csv  emd_river_clusters_mapping.csv  emd_turn_clusters_mapping.csv  encoder  encoder.cpp  enhance_hands_repr.py  equity  equity_calculator  equity_flop  equity_flop.cpp  equity_flop_calculation.cpp  equity_heatmap.csv  equity_preflop  equity_preflop.cpp  equity_river  equity_river.cpp  equity_river_COMPLEX_V.cpp  equity_river_calculation  equity_river_calculation.cpp  equity_turn  equity_turn.cpp  equity_turn_calculation.cpp  extract_clusters_mapping.py  kmeans_poker  kmeans_poker.cpp  l2_flop_clusters_mapping.csv  l2_river_clusters_mapping.csv  l2_turn_clusters_mapping.csv  main.cpp  out copy.csv  out.csv  output.csv  poker_evaluator.cpp  test.csv
